--- a/src/assets/scss/global/_variables.scss
+++ b/src/assets/scss/global/_variables.scss
@@ -6,9 +6,9 @@ $title: 'Luxurious Roman', cursive;
 $primary_color: darkred;
 $secondary_color: #71d3d7;
 
-$light_gray: #e6e6e6;
-$medium_gray: #cacaca;
-$dark_gray: #8a8a8a;
+$light_gray: #c9c9c9;
+$medium_gray: #b5b5b5;
+$dark_gray: #404040;
 $black: #0a0a0a;
 $white: #fefefe;
 
